--- a/trymito.io/styles/Page.module.css
+++ b/trymito.io/styles/Page.module.css
@@ -12,6 +12,10 @@
     align-items: center;
 }
 
+.main_left_align {
+    align-items: flex-start;
+}
+
 .background_card {
     background-color: var(--color-light-background);
 }
